<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_select_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_ten"
        android:gravity="center"
        android:text="@string/select_option"
        android:textColor="@color/black"
        android:textSize="@dimen/extra_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/txt_select_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_twenty"
        android:layout_marginTop="@dimen/size_twenty"
        android:layout_marginEnd="@dimen/size_twenty"
        android:background="@drawable/bg_textview_fill_black"
        android:gravity="center"
        android:paddingTop="@dimen/size_seven"
        android:paddingBottom="@dimen/size_seven"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:textSize="@dimen/extra_large"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_select_option" />

    <TextView
        android:id="@+id/txt_select_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_twenty"
        android:layout_marginTop="@dimen/size_twenty"
        android:layout_marginEnd="@dimen/size_twenty"
        android:layout_marginBottom="@dimen/size_twenty"
        android:background="@drawable/bg_textview_empty_black"
        android:gravity="center"
        android:paddingTop="@dimen/size_seven"
        android:paddingBottom="@dimen/size_seven"
        android:text="@string/gallery"
        android:textColor="@color/black"
        android:textSize="@dimen/extra_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_select_camera" />

    
</androidx.appcompat.widget.LinearLayoutCompat>